--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 datasets==2.12.0
 pandas==1.5.3
+ipykernel==6.25.2
+spacy #==3.6.1
+numpy==1.26.0
+seaborn==0.12.2
+matplotlib==3.8.0
+scikit-learn==1.3.0
